# desafio-fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: de9995bdd89f_add_relationship_client_order_and_.py
app/: custom_exception.py  main.py  response.py  security.py
app/controllers/auth/: auth.py
app/controllers/clients/: client.py
app/controllers/orders/: order.py
app/controllers/products/: product.py
app/db/: session.py
app/models/: client.py  login_data.py  order.py  orderproduct.py  product.py  user.py
app/services/: auth_service.py  client_service.py  product_service.py  user_service.py
tests/: conftest.py  test_user.py  utils.py
tests/routes/: test_clients.py  test_login.py  test_refresh.py  test_user.py
